[package]
name = "redpanda"
version = "1.0.0"
edition = "2021"
authors = ["Original by hackerb9, Rust port by community"]
description = "Display images in terminal using kitty graphics protocol"

[dependencies]
image = "0.24"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
base64 = "0.22"
